Added utility finctions to flask server and sqlite database creation
